--- a/packages/addtions.org
+++ b/packages/addtions.org
@@ -80,3 +80,4 @@
 | pacman | perl-file-mimeinfo                    | file opener with mime type                                                                     |
 | pacman | onboard                               | on-screen keyboard                                                                             |
 | git    | https://github.com/ym1234/colorpicker | a simple color picker                                                                          |
+| pacman | lshw                                  | list hardware devices                                                                          |
