--- a/packages/addtions.org
+++ b/packages/addtions.org
@@ -83,7 +83,7 @@
 | pacman | onboard                               | on-screen keyboard                                                                             |
 | git    | https://github.com/ym1234/colorpicker | a simple color picker                                                                          |
 | pacman | lshw                                  | list hardware devices                                                                          |
-| pacman | encf                                  | encrypted file system                                                                          |
+| pacman | encfs                                 | encrypted file system                                                                          |
 | pacman | tesseract                             | OCR engine                                                                                     |
 | pacman | tesseract-data-eng                    | English data for tesseract                                                                     |
 | pacman | tesseract-data-ara                    | Arabic data for tesseract                                                                      |
