--- a/packages/addtions.org
+++ b/packages/addtions.org
@@ -1,4 +1,4 @@
-| TAG    | NAME IN REPO (or git url)             | PURPOSE (should be a verb phrase to sound right while installing)                              |
+| Tag    | Name                                  | Purpose                                                                                        |
 |--------+---------------------------------------+------------------------------------------------------------------------------------------------|
 | pacman | nodejs                                | node.js is needed to run some programs ahead                                                   |
 | pacman | npm                                   | node.js pacage manager                                                                         |
