--- a/packages/base.org
+++ b/packages/base.org
@@ -1,83 +1,84 @@
-| TAG      | NAME IN REPO (or git url)                        | PURPOSE (should be a verb phrase to sound right while installing) |
-|----------+--------------------------------------------------+-------------------------------------------------------------------|
-| pacman   | base-devel                                       | is a group package with sudo and compilation software             |
-| pacman   | git                                              | is a version control system                                       |
-| pacman   | i3                                               | is the main graphical user interface and window manager           |
-| pacman   | xorg-server                                      | is the graphical server                                           |
-| pacman   | xorg-xdpyinfo                                    | retrieves screen information for some scripts                     |
-| pacman   | xorg-xinit                                       | starts the graphical server                                       |
-| pacman   | xorg-xinput                                      | controls the input devices in xorg                                |
-| pacman   | xf86-input-synaptics                             | handles the touchpad the right way                                |
-| pacman   | xorg-xprop                                       | property displayer for xorg                                       |
-| pacman   | xclip                                            | clipboard manageer for xorg                                       |
-| pacman   | xterm                                            | a simple terminal                                                 |
-| suckless | git://git.suckless.org/st                        | THE simple terminal                                               |
-| git      | https://github.com/Naheel-Azawy/theterm          | a wrapper to give the terminal super powers                       |
-| suckless | https://git.suckless.org/dmenu                   | runs commands and provides a UI for selection                     |
-| paman    | ttf-symbola                                      | unicode symbols and emojis                                        |
-| pacman   | ttf-liberation                                   | another pretty font                                               |
-| pacman   | ttf-dejavu                                       | the preferred monospace font                                      |
-| aur      | ttf-font-awesome                                 | used for the icons in the top bar                                 |
-| aur      | lf                                               | another terminal file manager cloning ranger but faster           |
-| pacman   | arandr                                           | is a UI for screen adjustment                                     |
-| pacman   | compton                                          | for transparency and removing screen-tearing                      |
-| pacman   | cronie                                           | manages scheduled tasks                                           |
-| pacman   | dosfstools                                       | allows your computer to access dos-like filesystems               |
-| pacman   | exfat-utils                                      | allows management of FAT drives                                   |
-| pacman   | ntfs-3g                                          | allows accessing NTFS partitions                                  |
-| pacman   | dunst                                            | is a suckless notification system                                 |
-| pacman   | feh                                              | a minimal image viewer (used to set wallpaper)                    |
-| git      | https://github.com/Naheel-Azawy/sxiv             | another minimal image viewer (a bit less minimal)                 |
-| pacman   | ffmpeg                                           | can record and splice video and audio on the command line         |
-| pacman   | chromium                                         | well, in most cases it is faster than firefox...                  |
-| pacman   | gnome-keyring                                    | serves as the system keyring                                      |
-| pacman   | gnome-themes-extra                               | gives the dark GTK theme                                          |
-| pacman   | i3blocks                                         | is the status bar                                                 |
-| pacman   | i3lock                                           | is the screen lock                                                |
-| pacman   | mpv                                              | is the patrician's choice video/gif player                        |
-| pacman   | networkmanager                                   | does exactly what it sounds like                                  |
-| pacman   | network-manager-applet                           | appears in the top right corner and manages the wi-fi connection  |
-| pacman   | pulseaudio                                       | is the audio system (>inb4 bloat)                                 |
-| pacman   | pulseaudio-alsa                                  | is an audio interface with ALSA                                   |
-| pacman   | pamixer                                          | is a terminal audio control interface                             |
-| pacman   | pulsemixer                                       | is an intuitive ncurses audio controller                          |
-| pacman   | maim                                             | can take quick screenshots at your request                        |
-| pacman   | tmux                                             | the terminal multiplexer                                          |
-| func     | tpm                                              | tmux package manager                                              |
-| pacman   | unrar                                            | extracts rar's                                                    |
-| pacman   | unzip                                            | unzips zips                                                       |
-| pacman   | w3m                                              | is a terminal browser which can also view images                  |
-| pacman   | wget                                             | downloads sites and files on the command line                     |
-| pacman   | xdotool                                          | provides window action utilities on the command line.             |
-| pacman   | xssstate                                         | times out the screen if locked                                    |
-| pacman   | poppler                                          | manipulates pdfs                                                  |
-| pacman   | atool                                            | manages and gives information about archives                      |
-| pacman   | fzf                                              | is a fuzzy finder tool                                            |
-| pacman   | highlight                                        | can highlight code output                                         |
-| pacman   | fish                                             | the friendly shell!                                               |
-| pacman   | emacs                                            | the best editor on this planet                                    |
-| pacman   | ispell                                           | spell checker                                                     |
-| pacman   | aspell-en                                        | English dictionary for ispell                                     |
-| pacman   | conky                                            | brings the lovely widgets at your desktop                         |
-| pacman   | conky-manager                                    | manages conky using GUI                                           |
-| git      | https://github.com/Naheel-Azawy/conky-config     | the used conky setup                                              |
-| pacman   | lxappearance                                     | configures GTK with a simple GUI                                  |
-| pacman   | cups                                             | in case you need to use a printer                                 |
-| pacman   | cups-pdf                                         | pdf for cups                                                      |
-| pacman   | system-config-printer                            | a little GUI to control your printers                             |
-| pacman   | acpi                                             | laptop battery information                                        |
-| pacman   | time                                             | measures the time taken by a process                              |
-| pacman   | jq                                               | json in the shell                                                 |
-| pacman   | lm_sensors                                       | mainly to monitor the temperature                                 |
-| aur      | xbanish                                          | hide the mouse cursor while typing                                |
-| pacman   | clipmenu                                         | a clipboard manger                                                |
-| git      | https://github.com/Naheel-Azawy/bicon.git        | bidirectional console                                             |
-| pacman   | lynx                                             | a terminal web browser                                            |
-| pacman   | ffmpegthumbnailer                                | video thumbnails. Needed for ranger                               |
-| aur      | simple-mtpfs                                     | MTP mounter using fuse                                            |
-| aur      | vidir                                            | edit files names in your favorite editor                          |
-| pacman   | perl-image-exiftool                              | media details                                                     |
-| git      | https://github.com/Naheel-Azawy/adwaita-too-dark | the used GTK theme                                                |
-| git      | https://github.com/Naheel-Azawy/Executor.git     | executes everything                                               |
-| git      | https://github.com/Naheel-Azawy/cp_p             | cp with progress                                                  |
-| git      | https://github.com/Naheel-Azawy/stpv             | files previewer in the terminal (used for LF and fzf mainly)      |
+| Tag        | Name                                             | Purpose                                                          |
+|------------+--------------------------------------------------+------------------------------------------------------------------|
+| pacman     | base-devel                                       | group package with sudo and compilation software                 |
+| pacman     | git                                              | version control system                                           |
+| aur_manual | yay                                              | Arch User Repository helper                                      |
+| pacman     | i3                                               | the window manager                                               |
+| pacman     | xorg-server                                      | graphical server                                                 |
+| pacman     | xorg-xdpyinfo                                    | retrieves screen information for some scripts                    |
+| pacman     | xorg-xinit                                       | starts the graphical server                                      |
+| pacman     | xorg-xinput                                      | controls the input devices in xorg                               |
+| pacman     | xf86-input-synaptics                             | handles the touchpad the right way                               |
+| pacman     | xorg-xprop                                       | property displayer for xorg                                      |
+| pacman     | xclip                                            | clipboard manageer for xorg                                      |
+| pacman     | xterm                                            | a simple terminal                                                |
+| suckless   | git://git.suckless.org/st                        | THE simple terminal                                              |
+| git        | https://github.com/Naheel-Azawy/theterm          | a wrapper to give the terminal super powers                      |
+| suckless   | https://git.suckless.org/dmenu                   | runs commands and provides a UI for selection                    |
+| pacman     | ttf-symbola                                      | unicode symbols and emojis                                       |
+| pacman     | ttf-liberation                                   | another pretty font                                              |
+| pacman     | ttf-dejavu                                       | the preferred monospace font                                     |
+| aur        | ttf-font-awesome                                 | used for the icons in the top bar                                |
+| aur        | lf                                               | another terminal file manager cloning ranger but faster          |
+| pacman     | arandr                                           | UI for screen adjustment                                         |
+| pacman     | compton                                          | for transparency and removing screen-tearing                     |
+| pacman     | cronie                                           | manages scheduled tasks                                          |
+| pacman     | dosfstools                                       | allows your computer to access dos-like filesystems              |
+| pacman     | exfat-utils                                      | allows management of FAT drives                                  |
+| pacman     | ntfs-3g                                          | allows accessing NTFS partitions                                 |
+| pacman     | dunst                                            | suckless notification system                                     |
+| pacman     | feh                                              | a minimal image viewer (used to set wallpaper)                   |
+| git        | https://github.com/Naheel-Azawy/sxiv             | another minimal image viewer (a bit less minimal)                |
+| pacman     | ffmpeg                                           | can record and splice video and audio on the command line        |
+| pacman     | chromium                                         | well, in most cases it is faster than firefox...                 |
+| pacman     | gnome-keyring                                    | serves as the system keyring                                     |
+| pacman     | gnome-themes-extra                               | gives the dark GTK theme                                         |
+| pacman     | i3blocks                                         | status bar                                                       |
+| pacman     | i3lock                                           | screen lock                                                      |
+| pacman     | mpv                                              | patrician's choice video/gif player                              |
+| pacman     | networkmanager                                   | does exactly what it sounds like                                 |
+| pacman     | network-manager-applet                           | appears in the top right corner and manages the wi-fi connection |
+| pacman     | pulseaudio                                       | the audio system (>inb4 bloat)                                   |
+| pacman     | pulseaudio-alsa                                  | audio interface with ALSA                                        |
+| pacman     | pamixer                                          | terminal audio control interface                                 |
+| pacman     | pulsemixer                                       | an intuitive ncurses audio controller                            |
+| pacman     | maim                                             | can take quick screenshots at your request                       |
+| pacman     | tmux                                             | the terminal multiplexer                                         |
+| func       | tpm                                              | tmux package manager                                             |
+| pacman     | unrar                                            | extracts rar's                                                   |
+| pacman     | unzip                                            | unzips zips                                                      |
+| pacman     | w3m                                              | terminal browser which can also view images                      |
+| pacman     | wget                                             | downloads sites and files on the command line                    |
+| pacman     | xdotool                                          | provides window action utilities on the command line.            |
+| pacman     | xssstate                                         | times out the screen if locked                                   |
+| pacman     | poppler                                          | manipulates pdfs                                                 |
+| pacman     | atool                                            | manages and gives information about archives                     |
+| pacman     | fzf                                              | fuzzy finder tool                                                |
+| pacman     | highlight                                        | can highlight code output                                        |
+| pacman     | fish                                             | the friendly shell!                                              |
+| pacman     | emacs                                            | the best editor on this planet                                   |
+| pacman     | ispell                                           | spell checker                                                    |
+| pacman     | aspell-en                                        | English dictionary for ispell                                    |
+| pacman     | conky                                            | brings the lovely widgets at your desktop                        |
+| pacman     | conky-manager                                    | manages conky using GUI                                          |
+| git        | https://github.com/Naheel-Azawy/conky-config     | the used conky setup                                             |
+| pacman     | lxappearance                                     | configures GTK with a simple GUI                                 |
+| pacman     | cups                                             | in case you need to use a printer                                |
+| pacman     | cups-pdf                                         | pdf for cups                                                     |
+| pacman     | system-config-printer                            | a little GUI to control your printers                            |
+| pacman     | acpi                                             | laptop battery information                                       |
+| pacman     | time                                             | measures the time taken by a process                             |
+| pacman     | jq                                               | json in the shell                                                |
+| pacman     | lm_sensors                                       | mainly to monitor the temperature                                |
+| aur        | xbanish                                          | hide the mouse cursor while typing                               |
+| pacman     | clipmenu                                         | a clipboard manger                                               |
+| git        | https://github.com/Naheel-Azawy/bicon.git        | bidirectional console                                            |
+| pacman     | lynx                                             | a terminal web browser                                           |
+| pacman     | ffmpegthumbnailer                                | video thumbnails. Needed for ranger                              |
+| aur        | simple-mtpfs                                     | MTP mounter using fuse                                           |
+| aur        | vidir                                            | edit files names in your favorite editor                         |
+| pacman     | perl-image-exiftool                              | media details                                                    |
+| git        | https://github.com/Naheel-Azawy/adwaita-too-dark | the used GTK theme                                               |
+| git        | https://github.com/Naheel-Azawy/Executor.git     | executes everything                                              |
+| git        | https://github.com/Naheel-Azawy/cp_p             | cp with progress                                                 |
+| git        | https://github.com/Naheel-Azawy/stpv             | files previewer in the terminal (used for LF and fzf mainly)     |
