--- a/packages/games.org
+++ b/packages/games.org
@@ -1,8 +1,8 @@
-| TAG    | NAME IN REPO (or git url) | PURPOSE (should be a verb phrase to sound right while installing) |
-|--------+---------------------------+-------------------------------------------------------------------|
-| pacman | gnome-mines               | and minesweeper                                                   |
-| pacman | gnome-chess               | in case you like chess                                            |
-| pacman | gnuchess                  | the GNU chess engine                                              |
-| pacman | mgba-qt                   | a gameboy emulator                                                |
-| pacman | mednafen                  | another emulator                                                  |
-| pacman | mupen64plus               | N64 emulator                                                      |
+| Tag    | Name        | Purpose                |
+|--------+-------------+------------------------|
+| pacman | gnome-mines | and minesweeper        |
+| pacman | gnome-chess | in case you like chess |
+| pacman | gnuchess    | the GNU chess engine   |
+| pacman | mgba-qt     | a gameboy emulator     |
+| pacman | mednafen    | another emulator       |
+| pacman | mupen64plus | N64 emulator           |
