--- a/packages/addtions.org
+++ b/packages/addtions.org
@@ -88,3 +88,4 @@
 | pacman | tesseract-data-eng                    | English data for tesseract                                                                     |
 | pacman | tesseract-data-ara                    | Arabic data for tesseract                                                                      |
 | aur    | xrandr-invert-colors                  | inver screen colors                                                                            |
+| func   | blackarch                             | hacking tools                                                                                  |
