--- a/packages/base-gui.org
+++ b/packages/base-gui.org
@@ -20,6 +20,7 @@
 | pacman   | compton                                          | for transparency and removing screen-tearing                     |
 | pacman   | dunst                                            | suckless notification system                                     |
 | pacman   | feh                                              | a minimal image viewer (used to set wallpaper)                   |
+| pacman   | imlib2                                           | images library. Needed for sxiv                                  |
 | git      | https://github.com/Naheel-Azawy/sxiv             | another minimal image viewer (a bit less minimal)                |
 | pacman   | chromium                                         | well, in most cases it is faster than firefox...                 |
 | pacman   | gnome-keyring                                    | serves as the system keyring                                     |
